[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/enemy/kid_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/enemy/kid_enemy.gd" type="Script" id=2]
[ext_resource path="res://src/core/random_audio_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/sounds/yay3.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sounds/yay1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sounds/yay2.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.819562
height = 1.23397

[sub_resource type="CapsuleShape" id=2]
radius = 0.876486
height = 1.46815

[node name="Kid" type="KinematicBody"]
collision_layer = 2
collision_mask = 14
script = ExtResource( 2 )

[node name="kid" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.5, 0, 2.26494e-07, 0, 1.5, 0, -2.26494e-07, 0, -1.5, 0, 0.0299692, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.44474, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0594687, 0 )
collision_layer = 2
collision_mask = 16
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.40982, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SnowballSpawnPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.642653, 1.60392, -0.936232 )

[node name="RandomAudioPlayer" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioPlayer"]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "Sounds"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RandomAudioPlayer"]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "Sounds"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="RandomAudioPlayer"]
stream = ExtResource( 4 )
volume_db = -3.0
bus = "Sounds"

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
